fix/image-url-amount-overflow

--- a/src/components/FormElements/PaymentLabel/paymentCheckboxLabel.module.scss
+++ b/src/components/FormElements/PaymentLabel/paymentCheckboxLabel.module.scss
@@ -126,7 +126,6 @@
 .amount {
   text-align: right;
   font-size: 15px;
-  width: 70px;
   text-overflow: ellipsis;
   overflow: hidden;
 
